# pydantic-ai-examples

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  output_3.json  pyproject.toml
.github/workflows/: docs.yml
basic_sentiment/: README.md  sentiment_classifier.py
bielik_example/: Modelfile  README.md  bielik_basic_inference.py  bielik_basic_tools.py
direct_model_request/: README.md  direct_request_demo.py
docs/: getting-started.md  index.md
docs/examples/: basic-sentiment.md  bielik.md  direct-model-request.md  dynamic-classification.md  history-processor.md  index.md  ocr-parsing.md  reasoning-effort.md  temperature.md
docs/overrides/: main.html
docs/stylesheets/: extra.css
dynamic_classification/: README.md  dynamic_classifier.py  dynamic_classifier_typed.py
history_processor/: 1_basic_history_handling.py  2_continuous_history.py  3_history_usage.py  4_history_filtering.py  5a_history_length_fixed.py  5b_history_length_dynamic.py  5c_history_with_tools.py  6_persistent_history.py  README.md  history_processor.py  output_3.json  pyproject.toml
ocr_parsing/: 1_basic_ocr_demo.py  2_ocr_with_structured_output.py  3_ocr_validation.py  README.md  shared_fns.py
ocr_parsing_demo/: 1_basic_ocr_demo.py  2_ocr_with_structured_output.py  3_ocr_valiadtion.py  README.md  shared_fns.py
reasoning_effort/: README.md  reasoning_demo.py
temperature/: README.md  temperature_demo.py
