[project]
name = "pydantic-ai-classification-demo"
license = { text = "MIT" }
version = "0.1.0"
description = "Parameter manipulation with PydanticAI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai>=0.0.14",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]
[project.urls]
License = "https://opensource.org/license/mit/"